HELIO-2898 - update accessibility page; ran axe checker on site and made a few accessibility fixes too

--- a/fulcrum/_layouts/default.html
+++ b/fulcrum/_layouts/default.html
@@ -8,7 +8,7 @@
 
     {% include header.html %}
 
-    <div id="maincontent"   class="page-content">
+    <div id="maincontent"   class="page-content" role="main">
         {{ content }}
     </div>
 
