--- a/fulcrum/_layouts/page.html
+++ b/fulcrum/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 <div class="container">
   <div class="row">
     <div class="col s12">
-      <article class="post">
+      <article class="post" role="article">
 
         <header class="post-header">
           <h1 class="post-title">{{ page.title }}</h1>
