--- a/fulcrum/_layouts/post.html
+++ b/fulcrum/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="container">
-      <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+      <article class="post" itemscope itemtype="http://schema.org/BlogPosting" role="article">
         <div class="row">
           <div class="col s12 center">
             <header class="post-header">
