Resolves HELIO-2953 Books on publisher catalog should be combined into one link

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -326,26 +326,26 @@ footer.press {
         padding: 0px;
         margin-bottom: 0px;
 
-        a > img {
+        img {
           margin-left: 0;
           margin-right: 0;
           border: 2px solid #eeeeee;
         }
+      }
 
-        .caption {
+      .caption {
+        padding: 0px;
+
+        h3.index_title {
+          font-size: 16px;
+        }
+
+        .authors {
+          font-size: 13px;
+        }
+
+        .col-sm-12 {
           padding: 0px;
-
-          h3.index_title {
-            font-size: 16px;
-          }
-
-          .authors {
-            font-size: 13px;
-          }
-
-          .col-sm-12 {
-            padding: 0px;
-          }
         }
       }
     }
