--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -180,7 +180,7 @@ $heb-black-80: #342f2e;
   .press {
     .results-container {
 
-      .documentHeader {
+      .document {
         h3 {
           font-weight: 600;
         }
@@ -570,7 +570,7 @@ $a2ru-white: #fafafa;
   .press {
     .results-container {
 
-      .documentHeader {
+      .document {
         h3 {
           font-weight: 600;
         }
@@ -929,7 +929,7 @@ $amherst-white: #fafafa;
   .press {
     .results-container {
 
-      .documentHeader {
+      .document {
         h3 {
           font-weight: 600;
         }
@@ -1286,7 +1286,7 @@ $barpublishing-white: #fafafa;
   .press {
     .results-container {
 
-      .documentHeader {
+      .document {
         h3 {
           font-weight: 600;
         }
@@ -1880,7 +1880,7 @@ $lever-black-80: #342f2e;
   .press {
     .results-container {
 
-      .documentHeader {
+      .document {
         h3 {
           font-weight: 600;
         }
@@ -4704,7 +4704,7 @@ $reki-black-80: #342f2e;
   .press {
     .results-container {
 
-      .documentHeader {
+      .document {
         h3 {
           font-weight: 600;
         }
@@ -5024,7 +5024,7 @@ $sussex-black-80: #342f2e;
   .press {
     .results-container {
 
-      .documentHeader {
+      .document {
         h3 {
           font-weight: 600;
         }
