--- a/app/views/press_catalog/_document_gallery.html.erb
+++ b/app/views/press_catalog/_document_gallery.html.erb
@@ -1,4 +1,4 @@
-<% # container for all documents in index list view -%>
+<% # container for all documents in index gallery view -%>
 <div id="documents" class="row gallery">
   <%= render_gallery_collection documents %>
 </div>
