--- a/app/views/shared/_ga.html.erb
+++ b/app/views/shared/_ga.html.erb
@@ -14,24 +14,45 @@
 
 <% if Rails.application.secrets.key? :google_analytics_id %>
   <script type="text/javascript">
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','<%= ga_url %>','ga');
+    // Wait until the cookie is set via user interaction
+    // and only then get Analytics under way.
+    (async() => {
+      while(!Cookies.get('um_cookie_consent'))
+        await new Promise(resolve => setTimeout(resolve, 1000));
+      setup_ga();
+    })();
 
-    window.ga_press_trackers = [];
-    ga('create', '<%= Rails.application.secrets.google_analytics_id %>', 'auto');
-    ga('send', 'pageview');
-    <% suffix = 1 %>
-    <% ga_ids.each do |ga_id| %>
-      ga('create', '<%= ga_id %>', 'auto', '<%= "pressTracker#{suffix}" %>')
-      ga('<%= "pressTracker#{suffix}" %>.send', 'pageview')
-      window.ga_press_trackers.push('<%= "pressTracker#{suffix}" %>');
-      <% suffix += 1 %>
-    <% end %>
-    <% if Rails.env.development? %>
-      window.ga_debug = {trace: true};
-    <% end %>
+    function setup_ga() {
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','<%= ga_url %>','ga');
+      window.ga_press_trackers = [];
+      var fields = {};
+      var allow_cookies = Cookies.get('um_cookie_consent') || 'na';
+      if (allow_cookies == 'deny' || allow_cookies == 'dismiss') {
+        fields['storage'] = 'none';
+      }
+
+      ga('create', '<%= Rails.application.secrets.google_analytics_id %>', 'auto', fields);
+      if (allow_cookies == 'deny' || allow_cookies == 'dismiss') {
+        ga('set', 'anonymizeIp', true);
+      }
+      ga('send', 'pageview');
+      <% suffix = 1 %>
+      <% ga_ids.each do |ga_id| %>
+        ga('create', '<%= ga_id %>', 'auto', '<%= "pressTracker#{suffix}" %>', fields)
+        if (allow_cookies == 'deny' || allow_cookies == 'dismiss') {
+          ga('<%= "pressTracker#{suffix}" %>.set', 'anonymizeIp', true);
+        }
+        ga('<%= "pressTracker#{suffix}" %>.send', 'pageview')
+        window.ga_press_trackers.push('<%= "pressTracker#{suffix}" %>');
+        <% suffix += 1 %>
+      <% end %>
+      <% if Rails.env.development? %>
+        window.ga_debug = {trace: true};
+      <% end %>
+    }
 
     function press_tracker_event(eventCategory, eventAction, eventLabel, eventValue) {
       for (var i = 0; i < window.ga_press_trackers.length; i++) {
