--- a/app/views/presses/_form.html.erb
+++ b/app/views/presses/_form.html.erb
@@ -27,6 +27,7 @@
   <%= f.input :press_url, label: 'Publisher\'s Current Website Address', required: true %>
   <%= f.input :google_analytics, label: 'Google Analytics Tracking ID' %>
   <%= f.input :google_analytics_url, label: 'Google Analytics Data Studio URL' %>
+  <%= f.input :readership_map_url, label: '(MPub) Readership Map URL' %>
   <%= f.input :typekit, label: 'Typekit ID' %>
   <%= f.input :twitter, label: 'Twitter Handle' %>
   <%= f.input :location, label: 'Publisher Location' %>
